[project]
name = "sql-15-days-challenge"
version = "0.1.0"
description = "A 15-day SQL challenge implementation using Python and SQLite with various data analysis problems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [
    { name = "Ehsan Kazemi" }
]
license = { text = "MIT" }
keywords = ["sql", "sqlite", "data-analysis", "challenge", "learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Education",
]

[project.urls]
Homepage = "https://www.linkedin.com/in/ehsan-kazemi/"
Repository = "https://github.com/ehsankf/SQL-Challenge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sql-challenge = "main:main"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101"]  # Allow assert statements